src/components/Card/Card.css
.card {
  margin: auto;
  margin-top: 15vh;
  margin-left: 10vh;
  margin-right: 10vh;
  transform-style: preserve-3d;
  position: relative;
  padding: 25px;
  padding-top: 1px;
  width: 300px;
  height: 400px;
  border-radius: 20px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
  background: radial-gradient(
    circle,
    rgba(49, 32, 84, 1) 16%,
    rgba(9, 3, 14, 1) 100%);
    box-shadow: 15px 15px 30px rgb(25, 25, 25),
    -15px -15px 30px rgb(73, 44, 128);
  transition: all 0.1s ease;
}

#card2{
  margin-bottom: 15vh;
}

.img {
  position: absolute;
  width: 80%;
  top: -10px;
  transition: all 0.5s ease;
  filter: drop-shadow(5px 5px 10px rgb(77, 13, 93));
}
.container{
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  position: absolute;
  top: 80%;
  z-index: 5;
  border-radius: 20px;
  border-top-left-radius: 25%;
  border-top-right-radius: 25%;
  background-color: rgba(13, 1, 20, 0.738);
  padding: 10px;
  height: 20%;
  .ruler{
    display: none;
  }
  .quote, .sizes-box{
    visibility: hidden;
  }
  transition: all 0.5s ease;
}
.title {
  font-weight: 500;
  font-size: 16px;
}
.title,
.card p {
  width: 100%;
  color: rgb(255, 255, 255);
  text-align: center;
}
.sizes-box {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 10px;
}
.sizes-box li {
  list-style: none;
  cursor: pointer;
  font-weight: bold;
  border-radius: 30px;
  padding: 0.5rem 1.5rem;
  background-color: rgb(220, 220, 220);
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}
.sizes-box li:hover {
  background-color: rgb(134, 134, 134);
}
.button-box {
  width: 100%;
}
.pos{
  font-weight: 600;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  color: rgb(187, 187, 187);
}
.quote{
  margin-bottom: 12px;
  color: black;
  font-size: 18px;
  font-weight: 800;
  text-shadow: -0.25px 0.25px 0.25px rgb(194, 62, 227)
}
.ruler{
  background-color: rgb(255, 255, 255);
  height: 5px;
  width: 50%;
  align-self: center;
  border-radius: 5px;
}
.container:hover{
  top: 50%;
  height: 50%;
  border-top-left-radius: 40%;
  border-top-right-radius: 40%;
  .quote, .sizes-box{
    visibility: visible;
  }
  .ruler{
    display: flex;
  }
}

